feat: use arrow keys and Enter to control app

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       overflow-y: scroll;
       height: 90vh;
     }
+    .focusable-left, .focusable-right {
+      scroll-margin-top: 1em;
+      scroll-margin-bottom: 1em;
+    }
   </style>
 </head>
 <body class="bg-gray-100">
