--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calculadora de Presupuestos</title>
-  <link rel="icon" href="icon.svg"/>
+  <link rel="icon" href="src/icon.svg"/>
 
   <!-- Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
